--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <script src="index.js"></script>
 </head>
 <body>
+    <iframe  style="width:400px;height:200px"  src="https://flipbookpdf.net/web/site/b30aa1f5cad4379f358f636f4ce3dff044200f0f202007.pdf.html"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
 </body>
 </html>
