--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <iframe  style="width:800px;height:800px"  src="https://flipbookpdf.net/web/site/b30aa1f5cad4379f358f636f4ce3dff044200f0f202007.pdf.html"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
-</body>
+    <div class = "center">
+        <h1>Title of Paper</h1>
+        <h2>Haripriya, Marwa, Andrea, Bhagirath</h2>
+        <h3>Abstract!</h3>
+        <p>Insert abstract paragraph here</p>
+        <h3>Github Link</h3>
+        <h3>Try Our Model!</h3>
+        <h3>Our Poster </h3>
+        <h3>Our Paper </h3>
+        <iframe  style="width:800px;height:800px"  src="https://flipbookpdf.net/web/site/b30aa1f5cad4379f358f636f4ce3dff044200f0f202007.pdf.html"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
+    
+    </div>
+</body>  
 </html>
