--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <h3>Abstract!</h3>
         <p>Insert abstract paragraph here</p>
         <h3>Github Link</h3>
+        <a href="https://github.com/MehtaPlusTutoring-MLBootcamp20/example/">Our Code!</a>
         <h3>Try Our Model!</h3>
         <h3>Our Poster </h3>
         <h3>Our Paper </h3>
         <iframe  style="width:800px;height:800px"  src="https://flipbookpdf.net/web/site/b30aa1f5cad4379f358f636f4ce3dff044200f0f202007.pdf.html"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
-    
+        <h3>Our Demo </h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/miHFzpYZoYk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </body>  
 </html>
