--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="https://github.com/MehtaPlusTutoring-MLBootcamp20/example/">Our Code!</a>
         <h3>Try Our Model!</h3>
         <h3>Our Poster </h3>
+        <img src="paperedreams.png" alt="Poster">
         <h3>Our Paper </h3>
         <iframe  style="width:800px;height:800px"  src="https://flipbookpdf.net/web/site/b30aa1f5cad4379f358f636f4ce3dff044200f0f202007.pdf.html"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
         <h3>Our Demo </h3>
