--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h3>Our Paper </h3>
         <iframe  style="width:800px;height:800px"  src="https://flipbookpdf.net/web/site/b30aa1f5cad4379f358f636f4ce3dff044200f0f202007.pdf.html"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
         <h3>Our Demo </h3>
+        <script src="https://gist.github.com/HaripriyaMehta/f9403a041cd14ca145dc15619faf3ec0.js"></script>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/miHFzpYZoYk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </body>  
